--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "babel-loader": "^8.1.0",
     "cypress": "^5.0.0",
     "cypress-iframe": "^1.0.1",
+    "mocha": "^8.1.3",
+    "mochawesome": "^6.1.1",
     "webpack": "^4.44.1"
   },
   "dependencies": {
